fixed overflow hidden problem

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -45,3 +45,8 @@
   border: 3px whitesmoke solid;
   border-bottom: 3px transparent solid;
 }
+
+#right article {
+  overflow-y: scroll;
+  height: 90vh;
+}
